fix: error with peer review logic, remove peer review failure